Clean up of qual name changes